Added --lang to headless.

This flag was already present in chrome, but it was ignored in headless.
This commit makes headless behave as expected.

R=eseckler@chromium.org, rvera@chromium.org

Bug: 747953
Change-Id: I39084bbb289157d0162d9b3a6ebc72d436983dad